# ops-transformer

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG_en.md  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING_en.md  QUICKSTART.md  QUICKSTART_en.md  README.md  README_en.md  SECURITY.md  SECURITY_en.md  build.sh  classify_rule.yaml  install_deps.sh  requirements.txt  version.cmake
.gitcode/ISSUE_TEMPLATE/: bug-report.yml  documentation.yml  feature-request.yml  question.yml
.gitcode/workflows/: sub_pipline_support.yaml
attention/attention_update/: README.md
attention/attention_worker_combine/: README.md
attention/attention_worker_scheduler/: README.md
attention/block_sparse_attention/: README.md
attention/block_sparse_attention_grad/: README.md
attention/chunk_gated_delta_rule/: README.md
attention/dense_lightning_indexer_grad_kl_loss/: README.md
attention/dense_lightning_indexer_softmax_lse/: README.md
attention/flash_attention_score/: README.md
attention/flash_attention_score_grad/: README.md
cmake/: build_empty_package.cmake  config.cmake  custom_build.cmake  fetch_cann_cmake.cmake  func.cmake  level2_ops_list  obj_func.cmake  opbuild.cmake  package.cmake  rty_obj_func.cmake  static.cmake  symbol.cmake  ut.cmake  variables.cmake
common/: CMakeLists.txt
docs/: CONTRIBUTING_DOCS.md  CONTRIBUTING_DOCS_en.md  QUICKSTART.md  README.md  README_en.md
examples/: CMakeLists.txt  README.md
experimental/ascend_ops/src/csrc/incre_flash_attention/: CMakeLists.txt  npu_fused_infer_attention_score.cpp
experimental/ascend_ops/src/csrc/incre_flash_attention/op_host/: incre_flash_attention_tiling.cpp  incre_flash_attention_tiling_impl.h
experimental/ascend_ops/src/csrc/incre_flash_attention/op_kernel/: incre_flash_attention_arch32.h
grouped_mat_mul_all_reduce/: README.md
mc2/: CMakeLists.txt
posembedding/inplace_partial_rotary_mul_grad/tests/: CMakeLists.txt
posembedding/inplace_partial_rotary_mul_grad/tests/ut/op_host/: CMakeLists.txt  test_inplace_partial_rotary_mul_grad_infershape.cpp  test_inplace_partial_rotary_mul_grad_tiling.cpp
posembedding/inplace_partial_rotary_mul_grad/tests/ut/op_kernel/: CMakeLists.txt  test_inplace_partial_rotary_mul_grad_kernel.cpp  test_inplace_partial_rotary_mul_grad_kernel.h
posembedding/inplace_partial_rotary_mul_grad/tests/ut/op_kernel/inplace_partial_rotary_mul_grad_data/: gen_data.py  gen_tiling.py
scripts/: oat_check.sh
tests/: test_config.yaml  test_soc_config.yaml
torch_extension/: README.md  setup.py
(+4716 files in other folders)
